Build first section and add images and heading for second

--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="top">
+        <div class="header">
+            <strong>MP Experience</strong>
+            <ul class="links">
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Mission</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="hero">
+            <div class="hero-text">
+                <h1>Welcome to the Mountain Peak Experience</h1>
+                <p>We like looking at mountains, tracking the movement of mountains, and climbing mountains. If you want to become an expert in the forgotten art of mountains, we can help you get one step closer to that as we all reach new heights together, in knowledge and in the sky.</p>
+                <button>Sign up</button>
+            </div>
+            <div class="hero-img"><img src="images/mountain-one.jpg" alt="Mountain and reflection in the water"></div>
+        </div>
+    </div>
+    <div class="mountain-info">
+        <h1>Why should thou join the MP Experience?</h1>
+        <div class="reasons">
+            <div class="reason-one">
+                <img src="images/mountain-two.jpg">
+                <p></p>
+            </div>
+            <div class="reason-two">
+                <img src="images/mountain-three.jpg">
+                <p></p>
+            </div>
+            <div class="reason-three">
+                <img src="images/mountain-four.jpg">
+                <p></p>
+            </div>
+            <div class="reason-four">
+                <img src="images/mountain-five.jpg">
+                <p></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
