--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="hero">
             <div class="hero-text">
                 <h1>Welcome to the Mountain Peak Experience</h1>
-                <p>We like looking at mountains, tracking the movement of mountains, and climbing mountains. If you want to become an expert in the forgotten art of mountains, we can help you get one step closer to that as we all reach new heights together, in knowledge and in the sky.</p>
+                <p>We like <b>looking at mountains, tracking the movement of mountains, and climbing mountains.</b> If you want to become an expert in the forgotten art of mountains, <em>we can help you get one step closer</em> to that as we all reach new heights together, in knowledge and in the sky.</p>
                 <button>Sign up</button>
             </div>
             <div class="hero-img"><img src="images/mountain-one.jpg" alt="Mountain and reflection in the water"></div>
