Add text under images for reasons and add quote-container div

--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <div class="reasons">
             <div class="reason-one">
                 <img src="images/mountain-two.jpg">
-                <p></p>
+                <p>You get to climb mountains. That's all I need to say.</p>
             </div>
             <div class="reason-two">
                 <img src="images/mountain-three.jpg">
-                <p></p>
+                <p>We are a rare society that many people in society today are looking for but can't find.</p>
             </div>
             <div class="reason-three">
                 <img src="images/mountain-four.jpg">
-                <p></p>
+                <p>Look at the above image. Look at it carefully!</p>
             </div>
             <div class="reason-four">
                 <img src="images/mountain-five.jpg">
-                <p></p>
+                <p>Mount Everest is 4424.5 taller than the average MPE member. This is also not Mount Everest.</p>
             </div>
         </div>
     </div>
