Add quote text and person who said it

--- a/index.html
+++ b/index.html
@@ -46,5 +46,12 @@
             </div>
         </div>
     </div>
+    <div class="quote-container">
+        <div class="quote">
+            <div class="quote-text"><em>Joining the MP Experience genuinely changed my life. I went from being a lone wolf kind of guy to being someone who wants to share meaningful experiences with others, and climbing mountains is fun! It is a  (mountain) peak experience. Haha. I love making jokes.</em></div>
+            <div class="quote-source">-Jimmy Rice, 3-year MPE member</div>
+        </div>
+    </div>
+    
 </body>
 </html>
