Add sign up section and footer to index.html

--- a/index.html
+++ b/index.html
@@ -42,16 +42,27 @@
             </div>
             <div class="reason-four">
                 <img src="images/mountain-five.jpg">
-                <p>Mount Everest is 4424.5 taller than the average MPE member. This is also not Mount Everest.</p>
+                <p>Mount Everest is 4424.5 times taller than the average MPE member. This is also not Mount Everest.</p>
             </div>
         </div>
     </div>
     <div class="quote-container">
         <div class="quote">
-            <div class="quote-text"><em>Joining the MP Experience genuinely changed my life. I went from being a lone wolf kind of guy to being someone who wants to share meaningful experiences with others, and climbing mountains is fun! It is a  (mountain) peak experience. Haha. I love making jokes.</em></div>
-            <div class="quote-source">-Jimmy Rice, 3-year MPE member</div>
+            <div class="quote-text">Joining the MP Experience genuinely changed my life. I went from being a lone wolf kind of guy to being someone who wants to share meaningful experiences with others, and climbing mountains is fun! It is a (mountain) peak experience. Haha. I love making jokes.</div>
+            <div class="quote-source">-Jimmy Rice, 3-year MPE member and father of three</div>
         </div>
     </div>
-    
+    <div class="call-container">
+        <div class="call-to-action">
+            <div class="call-left">
+                <div id="call">Call to action! It's time!</div>
+                <div id="call-p">Sign up for the MPE Experience by clicking that button! It takes less than a second, come on.</div>
+            </div>
+            <div class="call-right">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2024</div>
 </body>
 </html>
