Add space between call to action elements and center them

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="call-to-action">
             <div class="call-left">
                 <div id="call">Call to action! It's time!</div>
-                <div id="call-p">Sign up for the MPE Experience by clicking that button! It takes less than a second, come on.</div>
+                <div id="call-p">Sign up for the MPE Experience by clicking that button! It takes less than a minute, come on.</div>
             </div>
             <div class="call-right">
                 <button>Sign up</button>
