Link to Google form to make the sign up button have a purpose

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="hero-text">
                 <h1>Welcome to the Mountain Peak Experience</h1>
                 <p>We like <b>looking at mountains, tracking the movement of mountains, and climbing mountains.</b> If you want to become an expert in the forgotten art of mountains, <em>we can help you get one step closer</em> to that as we all reach new heights together, in knowledge and in the sky.</p>
-                <button>Sign up</button>
+                <button><a href="https://docs.google.com/forms/d/e/1FAIpQLScNFW5ChlwvfhhFlov-hlJDcGElepGepMbsh3zzbca5l0ac1g/viewform?usp=sf_link" target="_blank">Sign up</a></button>
             </div>
             <div class="hero-img"><img src="images/mountain-one.jpg" alt="Mountain and reflection in the water"></div>
         </div>
@@ -59,7 +59,7 @@
                 <div id="call-p">Sign up for the MPE Experience by clicking that button! It takes less than a minute, come on.</div>
             </div>
             <div class="call-right">
-                <button>Sign up</button>
+                <button><a href="https://docs.google.com/forms/d/e/1FAIpQLScNFW5ChlwvfhhFlov-hlJDcGElepGepMbsh3zzbca5l0ac1g/viewform?usp=sf_link" target="_blank">Sign up</a></button>
             </div>
         </div>
     </div>
